<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textPr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/enter_the_android_version_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:max="100" />

            <AutoCompleteTextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/android_version_name">

                <requestFocus />
            </AutoCompleteTextView>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textOff="@string/cancel"
                android:textOn="@string/ok" />

            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/progressStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/selcolor"
                android:text="@string/click_me"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excellent" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good" />
            </RadioGroup>

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/roundcorner"
                android:elevation="1dp"
                android:text="@string/roundcorner"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle"
                android:elevation="0dp"
                android:text="@string/rectangle"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/oval"
                android:elevation="1dp"
                android:text="@string/oval"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle"
                android:text="@string/circle"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/spinner"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:entries="@array/spinnerArray"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/alertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/gradient"
                android:text="@string/alertdialog_with_gradient"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pasteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/copyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:hint="@string/enter_the_text" />

            <Button
                android:id="@+id/copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:text="@string/copy_to_clipboard" />

            <Button
                android:id="@+id/paste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/paste_from_clipboard" />

            <TextView
                android:id="@+id/contextMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="center"
                android:text="@string/context_menu_click_and_hold"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/pop_menu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:text="@string/pop_menu" />


            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>